RESOLVED FIXED162383
[css-grid] ASSERT when sizing tracks with percentages inside calc
https://bugs.webkit.org/show_bug.cgi?id=162383
Summary [css-grid] ASSERT when sizing tracks with percentages inside calc
Sergio Villar Senin
Reported 2016-09-22 05:39:34 PDT
[css-grid] ASSERT when sizing tracks with percentages inside calc
Attachments
Patch (4.87 KB, patch)
2016-09-22 05:55 PDT, Sergio Villar Senin
darin: review+
Sergio Villar Senin
Comment 1 2016-09-22 05:55:51 PDT
Javier Fernandez
Comment 2 2016-09-22 06:07:10 PDT
Comment on attachment 289552 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=289552&action=review the change looks good to me. > LayoutTests/fast/css-grid-layout/tracks-wider-min-track-breadth-crash.html:5 > + display: grid; no need for the display property, since it's included in the "grid" style class provided in grid.css
Sergio Villar Senin
Comment 3 2016-09-23 09:32:06 PDT
Note You need to log in before you can comment on or make changes to this bug.